--- a/secure-websocket/src/main/resources/static/index.html
+++ b/secure-websocket/src/main/resources/static/index.html
@@ -17,15 +17,7 @@
 	</noscript>
 	<div id="main-content" class="container">
 		<div class="row">
-			<div class="col-md-6">
-				<form class="form-inline">
-					<div class="form-group">
-						<label for="name">What is your name?</label> <input type="text"
-							id="name" class="form-control" placeholder="Your name here...">
-					</div>
-				</form>
-			</div>
-			<div class="col-md-6">
+			<div class="col-md-12">
 				<form class="form-inline">
 					<div class="form-group">
 						<button id="connect" class="btn btn-default" type="submit">Connect</button>
@@ -37,17 +29,10 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div id="conversation"></div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
 				<form class="form-inline">
 					<div class="form-group">
-						<input type="text" id="message" class="form-control"
-							placeholder="message ...">
 						<button id="send" class="btn btn-default" type="submit"
-							disabled="disabled">Send</button>
+							disabled="disabled">Send Message</button>
 					</div>
 				</form>
 			</div>
