--- a/chat-app/src/main/resources/static/index.html
+++ b/chat-app/src/main/resources/static/index.html
@@ -17,6 +17,27 @@
 	</noscript>
 	<div id="main-content" class="container">
 		<div class="row">
+			<div class="col-md-4">
+				<div id="users"></div>
+			</div>
+			<div class="col-md-8">
+				<div id="conversation"></div>
+				<div class="row">
+					<div class="col-md-12">
+						<form class="form-inline">
+							<div class="form-group">
+								<input type="text" id="message" class="form-control"
+									placeholder="message ...">
+								<button id="send" class="btn btn-default" type="submit"
+									disabled="disabled">Send</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- 		<div class="row">
 			<div class="col-md-12">
 				<div id="conversation"></div>
 			</div>
@@ -32,7 +53,8 @@
 					</div>
 				</form>
 			</div>
-		</div>
+		</div> 
+		-->
 	</div>
 </body>
 </html>
